[package]
name = "netspot_control"
authors = ["Ossi Saukko <ossi.saukko@centria.fi>", "Olli Isohanni <olli.isohanni@centria.fi>"]
version = "1.0.2"
edition = "2021"
license-file = "LICENSE"

[dependencies]
diesel = { version = "2.0.2", features = ["sqlite"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
nix = { version = "0.26.2", features = ["signal"] }
pcap = "1.0.0"
reqwest = "0.11.12"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["rapidoc", "swagger"] }
serde = "1.0.147"
serde_json = "1.0.87"
termion = "2.0.1"
tokio = { version = "1.21.2", features = ["io-util", "net", "process", "sync", "time"] }
