[package]
name = "netspot_control"
authors = ["Ossi Saukko <ossi.saukko@centria.fi>", "Olli Isohanni <olli.isohanni@centria.fi>"]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.10.1"
rocket = { version = "0.5.0-rc.2", features = ['json'] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["rapidoc", "swagger"] }
serde = "1.0.144"
serde_json = "1.0.85"