[package]
name = "netspot_control"
authors = ["Ossi Saukko <ossi.saukko@centria.fi>", "Olli Isohanni <olli.isohanni@centria.fi>"]
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
pcap = "0.11.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["rapidoc", "swagger"] }
serde = "1.0.145"
serde_json = "1.0.85"
